tests/ui/public_step_name_import.stderr
error[E0432]: unresolved import `hibana::integration::program::steps`
 --> tests/ui/public_step_name_import.rs:1:35
  |
1 | use hibana::integration::program::steps::StepNil;
  |                                   ^^^^^ could not find `steps` in `program`
